# openai-chatkit-advanced-samples

customer-chatbot-template/: .env.template  .gitignore  DEPLOYMENT_CHECKLIST.md  QUICKSTART.md  README.md  TEMPLATE_OVERVIEW.md  package.json
customer-chatbot-template/backend/: README.md  pyproject.toml
customer-chatbot-template/backend/app/: __init__.py  assistant_agent.py  config.py  documents.py  main.py  memory_store.py
customer-chatbot-template/scripts/: configure-customer.py  setup-vector-store.py
